# o-1-ptimizer-be

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/scripts/: copy-monaco.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/extract-cpp-from-image/: route.ts
frontend/src/app/api/optimize/: route.ts
frontend/src/components/: OptimizerWorkbench.tsx  ThemeToggle.tsx
frontend/src/lib/: contracts.ts  useTheme.ts
scripts/: make_ppt.py
src/dsa_tutor_code_optimizer/: api.py  crew.py  main.py  schemas.py
src/dsa_tutor_code_optimizer/config/: agents.yaml  tasks.yaml
src/dsa_tutor_code_optimizer/tools/: __init__.py  custom_tool.py
